<resources>
    <string name="app_name">myladivaTest</string>
    <string name="LoginButton">login</string>
    <string name="LoginHeader">LOGIN PAGE</string>
    <string name="goToSignUp">Already have account? </string>
    <string name="signUp">Sign Up</string>
    <string name="surname">surname</string>
    <string name="last_name">Last Name</string>
    <string name="Email">Enter your email</string>
    <string name="Password">Enter your password</string>
    <string name="Already_have_acount">Already have an acount?</string>
    <string name="SignInButton">SIGN IN</string>

</resources>